--- a/package.json
+++ b/package.json
@@ -7,5 +7,20 @@
   "dependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.13.0"
+  },
+  "devDependencies": {
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js, wxml}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
